branches/zip: Merge revisions 6788:6918 from branches/5.1:

------------------------------------------------------------------------
  r6822 | vasil | 2010-03-15 10:17:31 +0200 (Mon, 15 Mar 2010) | 12 lines
  Changed paths:
     M /branches/5.1/row/row0sel.c

  branches/5.1:

  Typecast to silence a compiler warning:

  row/row0sel.c: 4548
          C4244: '=' : conversion from 'float' to 'ib_ulonglong', possible loss of data
  row/row0sel.c: 4553
          C4244: '=' : conversion from 'double' to 'ib_ulonglong', possible loss of data

  Reported by:	Jonas Oreland <Jonas.Oreland@Sun.COM>
  Discussed with:	Sunny Bains <sunny.bains@oracle.com>
  ------------------------------------------------------------------------
  r6884 | vdimov | 2010-03-26 13:05:03 +0200 (Fri, 26 Mar 2010) | 6 lines
  Changed paths:
     M /branches/5.1/mysql-test/innodb_bug38231.test

  branches/5.1:

  Fix a non-determinism in innodb_bug38231.

  Reported by:	Sergey Vojtovich <svoj@Sun.COM>
  ------------------------------------------------------------------------
  r6911 | vdimov | 2010-03-30 11:39:02 +0300 (Tue, 30 Mar 2010) | 2 lines
  Changed paths:
     M /branches/5.1/handler/ha_innodb.cc

  branches/5.1: Whitespace fixup
  ------------------------------------------------------------------------
  r6912 | vdimov | 2010-03-30 12:18:46 +0300 (Tue, 30 Mar 2010) | 2 lines
  Changed paths:
     M /branches/5.1/handler/ha_innodb.cc

  branches/5.1: Whitespace fixup on line 354
  ------------------------------------------------------------------------
  r6918 | mmakela | 2010-03-31 11:14:51 +0300 (Wed, 31 Mar 2010) | 6 lines
  Changed paths:
     A /branches/5.1/mysql-test/innodb_bug51920.result
     A /branches/5.1/mysql-test/innodb_bug51920.test
     M /branches/5.1/srv/srv0srv.c

  branches/5.1: Obey KILL during a lock wait (Bug #51920).

  srv_suspend_mysql_thread(), srv_lock_timeout_and_monitor_thread():
  Check trx_is_interrupted() in addition to checking the lock wait timeout.

  rb://279 approved by Sunny Bains
  ------------------------------------------------------------------------