srv/srv0srv.c
@@ -1609,8 +1609,9 @@ srv_suspend_mysql_thread(
 	innodb_lock_wait_timeout, because trx->mysql_thd == NULL. */
 	lock_wait_timeout = thd_lock_wait_timeout(trx->mysql_thd);
 
-	if (lock_wait_timeout < 100000000
-	    && wait_time > (double) lock_wait_timeout) {
+	if (trx_is_interrupted(trx)
+	    || (lock_wait_timeout < 100000000
+		&& wait_time > (double) lock_wait_timeout)) {
 
 		trx->error_state = DB_LOCK_WAIT_TIMEOUT;
 	}
@@ -2158,9 +2159,10 @@ loop:
 			lock_wait_timeout = thd_lock_wait_timeout(
 				trx->mysql_thd);
 
-			if (lock_wait_timeout < 100000000
-			    && (wait_time > (double) lock_wait_timeout
-				|| wait_time < 0)) {
+			if (trx_is_interrupted(trx)
+			    || (lock_wait_timeout < 100000000
+				&& (wait_time > (double) lock_wait_timeout
+				    || wait_time < 0))) {
 
 				/* Timeout exceeded or a wrap-around in system
 				time counter: cancel the lock request queued
